--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,16 @@
 {
-  "name": "adapt-ppq",
-  "version": "0.0.1",
-  "homepage": "",
-  "authors": [
-    ""
-  ],
-  "description": "",
-  "main": "/js/adapt-ppq.js",
+  "name": "adapt-ppq-audio",
+  "version": "2.0.0",
+  "framework": "^2.0.0",
+  "homepage": "https://github.com/deltanet/adapt-ppq-audio",
+  "issues": "https://github.com/deltanet/adapt-ppq-audio/issues",
+  "displayName" : "Pinpoint Questionn with audio",
+  "component" : "ppq-audio",
+  "description": "A pin point question component",
+  "main": "/js/adapt-ppq-audio.js",
   "keywords": [
     "adapt-plugin",
     "adapt-component"
   ],
-  "license": "GPLv3"
+  "license": "GPL-3.0"
 }
