--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "adapt-ppq-audio",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "framework": "^2.0.0",
   "homepage": "https://github.com/deltanet/adapt-ppq-audio",
   "issues": "https://github.com/deltanet/adapt-ppq-audio/issues",
   "displayName" : "Pin Point Question",
   "component" : "ppq-audio",
-  "description": "A question component that requires users to correctly position one or more pins on an image.",
-  "main": "/js/adapt-ppq.js",
+  "description": "A pin point question component",
+  "main": "/js/adapt-ppq-audio.js",
   "keywords": [
     "adapt-plugin",
     "adapt-component"
