--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "adapt-ppq-audio",
-  "version": "3.0.1",
-  "framework": ">=4",
+  "version": "4.0.0",
+  "framework": ">=5",
   "homepage": "https://github.com/deltanet/adapt-ppq-audio",
   "issues": "https://github.com/deltanet/adapt-ppq-audio/issues",
   "displayName" : "Pin Point Question",
@@ -12,5 +12,5 @@
     "adapt-plugin",
     "adapt-component"
   ],
-  "license": "GPLv3"
+  "license": "GPL-3.0"
 }
